--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,22 +24,27 @@ android {
 
 dependencies {
 
+    androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2.2') {
+        // Necessary to avoid version conflicts
+        exclude group: 'com.android.support', module: 'appcompat-v7'
+        exclude group: 'com.android.support', module: 'design'
+        exclude group: 'com.android.support', module: 'support-v4'
+        exclude group: 'com.android.support', module: 'support-annotations'
+        exclude module: 'recyclerview-v7'
+    }
     compile 'com.android.support:appcompat-v7:25.4.0'
     compile 'com.android.support:design:25.4.0'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:recyclerview-v7:25.4.0'
     compile 'com.android.support:cardview-v7:25.4.0'
-    compile "com.android.support:support-core-utils:25.4.0"
-
+    compile 'com.android.support:support-core-utils:25.4.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
     compile 'com.jakewharton:butterknife:8.8.1'
-    compile 'com.google.dagger:dagger:2.11'
     compile 'com.jakewharton.timber:timber:4.5.1'
     compile 'net.simonvt.schematic:schematic:0.7.0'
     compile 'com.firebase:firebase-jobdispatcher:0.8.3'
     compile 'com.google.android.exoplayer:exoplayer:r2.5.3'
-
+    compile 'com.android.support.test.espresso:espresso-idling-resource:2.2.2'
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support:support-annotations:25.4.0'
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
