--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,11 @@ dependencies {
     compile 'net.simonvt.schematic:schematic:0.7.0'
     compile 'com.firebase:firebase-jobdispatcher:0.8.3'
     compile 'com.google.android.exoplayer:exoplayer:r2.5.3'
+    compile 'com.google.code.gson:gson:2.8.2'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.google.dagger:dagger:2.12'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.12'
     compile 'com.android.support.test.espresso:espresso-idling-resource:2.2.2'
     testCompile 'junit:junit:4.12'
     androidTestCompile 'com.android.support:support-annotations:25.4.0'
