--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,33 @@ android {
 
 dependencies {
 
+    ext {
+        supportLibVersion = '25.4.0'
+    }
+    compile "com.android.support:appcompat-v7:${supportLibVersion}"
+    compile "com.android.support:design:${supportLibVersion}"
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    compile "com.android.support:recyclerview-v7:${supportLibVersion}"
+    compile "com.android.support:cardview-v7:${supportLibVersion}"
+    compile "com.android.support:support-core-utils:${supportLibVersion}"
+
+    compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.jakewharton:butterknife:8.8.1'
+    compile 'com.jakewharton.timber:timber:4.5.1'
+    compile 'net.simonvt.schematic:schematic:0.7.0'
+    compile 'com.firebase:firebase-jobdispatcher:0.8.3'
+    compile 'com.google.android.exoplayer:exoplayer:r2.5.3'
+    compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
+    compile 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+    compile 'com.google.code.gson:gson:2.8.2'
+    compile 'com.squareup.retrofit2:retrofit:2.3.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
+    compile 'com.google.dagger:dagger:2.12'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.12'
+    compile "com.mikepenz:iconics-core:2.9.3@aar"
+    compile "com.mikepenz:iconics-views:2.9.3@aar"
+    compile 'com.mikepenz:google-material-typeface:3.0.1.1.original@aar'
+
     androidTestCompile('com.android.support.test.espresso:espresso-contrib:2.2.2') {
         // Necessary to avoid version conflicts
         exclude group: 'com.android.support', module: 'appcompat-v7'
@@ -32,26 +59,9 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
         exclude module: 'recyclerview-v7'
     }
-    compile 'com.android.support:appcompat-v7:25.4.0'
-    compile 'com.android.support:design:25.4.0'
-    compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.android.support:recyclerview-v7:25.4.0'
-    compile 'com.android.support:cardview-v7:25.4.0'
-    compile 'com.android.support:support-core-utils:25.4.0'
-    compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.jakewharton:butterknife:8.8.1'
-    compile 'com.jakewharton.timber:timber:4.5.1'
-    compile 'net.simonvt.schematic:schematic:0.7.0'
-    compile 'com.firebase:firebase-jobdispatcher:0.8.3'
-    compile 'com.google.android.exoplayer:exoplayer:r2.5.3'
-    compile 'com.google.code.gson:gson:2.8.2'
-    compile 'com.squareup.retrofit2:retrofit:2.3.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.3.0'
-    compile 'com.google.dagger:dagger:2.12'
-    annotationProcessor 'com.google.dagger:dagger-compiler:2.12'
     compile 'com.android.support.test.espresso:espresso-idling-resource:2.2.2'
     testCompile 'junit:junit:4.12'
-    androidTestCompile 'com.android.support:support-annotations:25.4.0'
+    androidTestCompile "com.android.support:support-annotations:${supportLibVersion}"
     androidTestCompile 'com.android.support.test.espresso:espresso-core:2.2.2'
     androidTestCompile 'com.android.support.test.espresso:espresso-intents:2.2.2'
     androidTestCompile 'com.android.support.test:rules:0.5'
